# cloud-storage

./: .env.sample  .gitignore  DockerFile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
cloud_storage/: __main__.py
cloud_storage/config/: __init__.py  default.py  utils.py
cloud_storage/db/: alembic.ini
cloud_storage/db/connection/: __init__.py  session.py
cloud_storage/db/migration/: env.py
cloud_storage/db/migration/versions/: 2023-01-10_98b625428d2b_initial.py  2023-01-15_6cf7de411094_initial.py  2023-01-16_449fa3d9fffc_initial.py
cloud_storage/db/models/: __init__.py  base.py  file.py  url.py
cloud_storage/endpoints/: __init__.py  auth.py  file.py  health_check.py  not_found.py  output_file.py  upload_file.py
cloud_storage/schemas/: __init__.py  files.py  registration.py  user.py
cloud_storage/utils/: __init__.py
cloud_storage/utils/files/: __init__.py  business_logic.py  file_db.py
cloud_storage/utils/user/: __init__.py  auth_db.py  business_logic.py
front/: index.html
front/js/: main.js
tests/: test_main.http
