[tool.poetry]
name = "cloud-storage"
version = "0.1.0"
description = ""
authors = ["markin-2002 <markin-2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "cloud_storage"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
