[tool.poetry]
name = "cloud_storage"
version = "0.1.0"
description = ""
authors = ["markin-2002 <markin-2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "cloud_storage"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
requests = "^2.28.1"
SQLAlchemy = "^1.4.46"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
