[tool.poetry]
name = "cloud_storage"
version = "0.1.0"
description = ""
authors = ["markin-2002 <markin-2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "cloud_storage"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
requests = "^2.28.1"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.46"
pydantic = "^1.10.4"
email-validator = "^1.3.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
alembic = "^1.9.1"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
fastapi-users = "^10.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
